test/classes/initializers/generics/param-field-default-value-non-param-field.good
param-field-default-value-non-param-field.chpl:3: error: default value for param is not a param
